--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-sticky": "^6.0.3",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/react-sticky": "^6.0.4"
   }
 }
